    - update debian/patches/series
  * Firefox recommends libcanberra0 now that bmo: #635918 has landed
    - update debian/control{,in}
  * Drop the solid white separators from the addressbar autocomplete dropdown,
    and increase padding so that it doesn't look so bad with dark themes
    - add debian/patches/autocomplete-theme-tweak.patch
    - update debian/patches/series

  [ Jamie Strandboge <jamie@ubuntu.com> ]
  * debian/usr.bin.firefox.apparmor.12.04: update comment for Ux rules

 -- Chris Coulson <chris.coulson@canonical.com>  Thu, 19 Jan 2012 16:10:12 +0000

firefox-trunk (11.0~a1~hg20111220r83015-0ubuntu1) precise; urgency=low

  * New upstream snapshot v11.0 A1 HG20111220R83015
    - Fix LP: #875266 - Firefox ignores GNOME3 proxy settings

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Update globalmenu-extension to 2.5 prerelease r270
  * Turn off the one-time addon selection dialog (LP: #888307)
    - update debian/vendor.js
  * Ensure we include locales in the tarball if they are in shipped-locales
    but not in all-locales
    - update debian/build/create-tarball.py
  * Update after landing of bmo: #701875 - Rename omni.jar to omni.ja
    - update debian/firefox.install.in
  * Ensure that the crash reporter is disabled if rebuilt by Ubuntu
    derivatives, as there will be no crash symbols for those
    - update debian/rules
  * Only add "Ubuntu" to the UA string when being built for Ubuntu
    - update debian/rules
  * Drop obsolete Debian menu file
    - remove debian/firefox.menu.in
    - don't create a 32x32 xpm icon in debian/rules
    - drop the imagemagick build-depend in debian/control
  * Temporarily disable ipdl tests due to build failures. These aren't
    enabled upstream, anyway
    - update debian/config/mozconfig.in
  * Don't install the libxul pkgconfig file in precise. Mozvoikko doesn't
    need this anymore
    - update debian/rules
    - update debian/firefox-dev.install.in